--- a/app/globals.css
+++ b/app/globals.css
@@ -3,6 +3,9 @@
 @tailwind utilities;
 
 
-body {
-  color: white;
+*,:after,:before  {
+  font-size: 14px;
+  cursor: default;
+  user-select: none!important;
+  color: #fff;
 }
